--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ main{
 }
 
 main.blur{
-  filter: blur(5px) grayscale(1);
+  filter: blur(5px) grayscale(5);
 }
 
 
@@ -71,7 +71,6 @@ section{
   margin-left: auto;
 }
 
-
 .navbar-brand{
   margin: 0;
   text-align: center;
@@ -97,12 +96,17 @@ section{
   padding: 30px 0;
 }
 
+.navigation-menu{
+  list-style: none;
+}
+
 .navigation-menu > li > a{
   font-size: 0;
   display: block;
   padding: 15px;
   color: #c9cad6;
   border-left: 3px solid transparent;
+  text-decoration: none;
 }
 
 .navigation-menu > li > a > i{
@@ -111,7 +115,7 @@ section{
 }
 
 .navigation-menu > li > a:hover,
-.navigation-menu > li > a.active{
+.navigation-menu > li.active > a{
   color: #5f80f6;
   border-left: 3px solid #5f80f6;
 }
@@ -443,7 +447,7 @@ section{
 }
 
 /* Responsive mobile & tablet */
-@media only screen and (max-width: 980px){
+@media only screen and (max-width: 1099px){
   main{
     margin: 0;
     margin-top: 95px;
@@ -486,6 +490,11 @@ section{
     right: 10px;
     opacity: 1;
     visibility: visible;
+    box-shadow: 0px 20px 47px rgba(0, 0, 0, 0.20);
+  }
+
+  .navigation-menu{
+    list-style: none !important;
   }
 
   .navigation-menu > li > a{
@@ -499,7 +508,6 @@ section{
   .navigation-menu > li > a > i{
     display: none;
   }
-
 
   .card-overview{
     padding: 20px;
